add methodology and tools

--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,16 @@
 \setstretch{1.2}
 \definecolor{mygray}{RGB}{88, 88, 88}
 \pagestyle{plain}
+\usepackage{enumitem}
+\usepackage{pgfgantt}
+\usepackage{pgfcalendar}
+
+\definecolor{sprint0}{RGB}{240,147,251}
+\definecolor{sprint1}{RGB}{79,172,254}
+\definecolor{sprint2}{RGB}{67,233,123}
+\definecolor{sprint3}{RGB}{250,112,154}
+\definecolor{sprint4}{RGB}{48,207,208}
+
 
 \begin{document}
 
@@ -69,9 +79,30 @@
 \section{Stakeholder Identification}
 
 \section{Software Development Methodology}
+For this project, we will use the \textbf{Agile (Scrum)} development process. The reason for choosing Scrum is that this project has many constraints due to the multiple roles involved in it, and we need to have continuous communication with Client/RP. Even after extensive requirement analysis, requirements might evolve, Client may want more features, or might not features already developed. So, having an iterative approach is beneficial for effective development and Scrum will provide us a facility to accommodate these changes. In Scrum, system is divided into sprints where each sprints is communicated with Client, feedback is noticed and changes are applied which in result rectifies the overall system. Continuous involvement of stakeholders shall assure us that developed system meets user requirements and needs and issues are identified early which makes development effective.
+According to one year development schedule, project will be divided into phases as \textbf{Scrum sprints}:
+
+
+
+
+
 
 \section{Tools and Technologies}
-
+\begin{itemize}
+    \item \textbf{Backend:} 
+        \begin{itemize}
+            \item[$\circ$] MySQL (relational database) 
+        \end{itemize}
+    \item \textbf{Programming Languages:} 
+        \begin{itemize}
+            \item[$\circ$] Node.js for server-side scripting
+            \item[$\circ$] HTML, CSS, JavaScript (or any framework like React/Angular)
+        \end{itemize}
+    \item \textbf{Web Server:} 
+        \begin{itemize}
+            \item[$\circ$] Apache or Nginx (if better performance is needed with high traffic)
+        \end{itemize}
+\end{itemize}
 \section{References}
 
 \end{document}
