--- a/main.tex
+++ b/main.tex
@@ -81,7 +81,7 @@ to balance study time, free slots, and other activities. When a timetable is cle
 planned, and clash-free, students can easily follow their routines and teachers can take
 their classes without confusion. It defines the schedule of classes, allocates venues, assigns
 instructors, and ensures that academic activities are processed in an organized manner.
-Therefore, a proper, efficient, and effective timetable to support smooth learning process
+Therefore, a proper, efficient, and effective timetable is required to support smooth learning process
 in the university.
 \section{Problem Statement}
 
