--- a/main.tex
+++ b/main.tex
@@ -12,8 +12,7 @@
 \usepackage{enumitem}
 \usepackage{pgfgantt}
 \usepackage{pgfcalendar}
-
-\usepackage{url}
+% \usepackage{url}
 \usepackage[hidelinks,breaklinks=true]{hyperref}
 \def\UrlBreaks{\do\/\do-}
 
@@ -23,7 +22,6 @@
 \definecolor{sprint2}{RGB}{234,34,100}
 \definecolor{sprint3}{RGB}{247,141,96}
 \definecolor{sprint4}{RGB}{8,207,208}
-
 
 
 \begin{document}
@@ -77,15 +75,9 @@
 \newpage
 
 \section{Introduction}
-In any education system, time management is very important for both teachers and
-students. A managed schedule helps everyone stay organized and focused. It is important
-to balance study time, free slots, and other activities. When a timetable is clear, well
-planned, and clash-free, students can easily follow their routines and teachers can take
-their classes without confusion. It defines the schedule of classes, allocates venues, assigns
-instructors, and ensures that academic activities are processed in an organized manner.
-Therefore, a proper, efficient, and effective timetable is required to support smooth learning process
-in the university.
+
 \section{Problem Statement}
+The current traditional way of managing and creating university timetables often causes problems like overlapping classes, venues being booked for more than one class simultaneously. This increases inefficiency when there are multiple departments which is a problem in making sure teachers, students, and classrooms are all available at the same time. In addition to that, makeup classes and checking free time slots are done informally through Whatsapp groups by Class Representatives (CR), which sometime leads to delays and conflicts. This makes it harder for students to follow their schedules and for teachers to plan their work. Moreover, timetable is shared through mails, so when there is some conflict, it is resolved and shared again which makes accessing it harder when there are multiple schedules have been shared. Hence, there is a clear need for a proper centralized timetable system that can handle multiple departments, identify conflicts so that can be resolved early, and make education easier. The proposed system aims to solve these problems by providing a centralized platform where clash-free timetable will be ensured. It will provide convenience to everyone involved in timetable managing and scheduling process. Moreover, the system will allow end-users (Students) to view their classes timetable in a mannered way.
 
 \section{Project Objectives}
 The major objective of this project is to implement a management system that will provide a platform for creating and managing class schedules and timetables effectively for faculty and students of the university. This project aims to replace the typical paper-based system and provide a centralized digital solution.
@@ -97,15 +89,40 @@ The key objectives are:
     \item To help administrators in finding and resolving clashes between classes, instructors, and class venues.
     \item To implement role-based access for administrators, faculty, and students.
     \item To design a user-friendly web interface that provides ease of use for all users.
-    \item To allow students and faculty to view updated schedules online whenever changes occur.
+    \item To allow students and faculty to view updated schedules through dashboards online whenever changes occur.
     \item To store previous timetable records for future reference.
 \end{itemize}
 
 \section{Stakeholder Identification}
 
+The development and implementation of the \textbf{University Timetable Management System} involve multiple stakeholders, where everyone has their own role, responsibilities. The identified stakeholders are as follows:
+
+\begin{itemize}
+    \item \textbf{University Administration:} 
+    Responsible for checking overall system deployment and making sure that the system aligns with organization's policies. They also provide resources and approval for implementation of the system.
+
+    \item \textbf{System Administrator (Admin):}
+    The admin is responsible for creating, updating, and maintaining the timetables for all departments and resolving scheduling conflicts. Admin is also responsible for creating and deleting user accounts.
+
+    \item \textbf{Faculty Members:}
+    Faculty members will use the system to view their teaching schedules, assigned venues, and timings.
+
+    \item \textbf{Students:}
+    These are the end-users who will access the timetable to view class schedules, timings, and assigned venue details. The system makes sure that students always have access to the most updated timetable.
+
+    \item \textbf{Course Coordinators:}
+    Help admin by providing course details and requirements of department. They play a major role in ensuring that timetable data remains accurate without any conflict between classes.
+
+    \item \textbf{ITSC / IT Support:}
+    Oversees labs allocation and their schedule. IT admins also assist in scheduling as they are responsible for labs and their usage.
+
+    \item \textbf{Requirement Provider (Client):}
+    Provides project requirements, feedback and continuously communicates during the development process to ensure that the system meets the university’s needs and requirements.
+\end{itemize}
+
+
 \section{Software Development Methodology}
 For this project, we will use the \textbf{Agile (Scrum)} development process. The reason for choosing Scrum is that this project has many constraints due to the multiple roles involved in it, and we need to have continuous communication with Client/RP. Even after extensive requirement analysis, requirements might evolve, Client may want more features, or might not features already developed. So, having an iterative approach is beneficial for effective development and Scrum will provide us a facility to accommodate these changes. In Scrum, system is divided into sprints where each sprints is communicated with Client, feedback is noticed and changes are applied which in result rectifies the overall system. Continuous involvement of stakeholders shall assure us that developed system meets user requirements and needs and issues are identified early which makes development effective.
-
 According to one year development schedule, project will be divided into phases as \textbf{Scrum sprints}. \textbf{Each sprint spans one month}, hence there are 12 sprints such as:
 
 
@@ -114,14 +131,14 @@ According to one year development schedule, project will be divided into phases 
 \begin{table}[h!]
 \centering
 \renewcommand{\arraystretch}{1.3} 
-\begin{tabular}{|p{5cm}|p{2.5cm}|p{8cm}|}
+\begin{tabular}{|p{6cm}|p{9cm}|}
 \hline
-\textbf{Phase} & \textbf{Duration} & \textbf{Activities} \\ \hline
-\textbf{Planning \& Requirement Analysis} & 2 month & Requirement gathering, defining project backlog, and sprint planning. \\ \hline
-\textbf{Prototype \& Core Modules} & 3 months & Develop core modules (user authentication, database setup, basic CRUD operations), front-end interface, and first testing. \\ \hline
-\textbf{Feature Development \& Integration} & 3 months & Develop additional features (advanced modules) and integrate modules, do unit and integration testing. \\ \hline
-\textbf{Testing \& Refinement} & 2 months & Perform system testing, bug fixing, perform refinement based on user feedback. \\ \hline
-\textbf{Deployment \& Final Evaluation} & 2 months & Final deployment and user training. \\ \hline
+\textbf{Phase} & \textbf{Activities} \\ \hline
+\textbf{Planning \& Requirement Analysis} & Requirement gathering, defining project backlog, and sprint planning. \\ \hline
+\textbf{Prototype \& Core Modules} & Develop core modules (user authentication, database setup, basic CRUD operations), front-end interface, and first testing. \\ \hline
+\textbf{Feature Development \& Integration} & Develop additional features (advanced modules) and integrate modules, do unit and integration testing. \\ \hline
+\textbf{Testing \& Refinement} & Perform system testing, bug fixing, perform refinement based on user feedback. \\ \hline
+\textbf{Deployment \& Final Evaluation} & Final deployment and user training. \\ \hline
 \end{tabular}
 \caption{Project Schedule in Sprints}
 \end{table}
@@ -169,7 +186,6 @@ According to one year development schedule, project will be divided into phases 
 
 
 
-
 \section{Tools and Technologies}
 \begin{itemize}
     \item \textbf{Backend:} 
@@ -186,15 +202,45 @@ According to one year development schedule, project will be divided into phases 
             \item[$\circ$] Apache or Nginx (if better performance is needed with high traffic)
         \end{itemize}
 \end{itemize}
-\section{References}
-\begin{enumerate}[label={[{\arabic*}]}]
-    \item B. Joy, “Software Engineering Project: Robo Hatch,” \textit{GitHub Repository}, 2021. [Online]. Available: \url{https://github.com/basudebjoy/Software-Engineering-Project-Robo-Hatch/} [Accessed: Nov. 8, 2025].
+\section{References} 
+\renewcommand{\bibname}{}
+\begin{thebibliography}{99}
 
-    \item University of Washington, “Beer Recommendation System Project Proposal,” \textit{CSE403: Software Engineering Course}, 2012. [Online]. Available: \url{https://courses.cs.washington.edu/courses/cse403/12sp/Projects/proposals/brdmstr-proposal.pdf} [Accessed: Nov. 8, 2025].
+\bibitem{joy2021}
+B. Joy, "Software Engineering Project: Robo Hatch," \textit{GitHub Repository}, 2021. [Online]. Available: \url{https://github.com/basudebjoy/Software-Engineering-Project-Robo-Hatch/}. [Accessed: Nov. 8, 2025].
 
-    \item H. Techie-Menson and P. Nyagorme, “Design and Implementation of a Web-Based Timetable System for Higher Education Institutions,” \textit{International Journal of Computer Applications}, vol. 7, pp. 1–13, 2021.
+\bibitem{uw2012}
+University of Washington, "Beer Recommendation System Project Proposal," \textit{CSE403: Software Engineering Course}, 2012. [Online]. Available: \url{https://courses.cs.washington.edu/courses/cse403/12sp/Projects/proposals/brdmstr-proposal.pdf}. [Accessed: Nov. 8, 2025].
 
-\end{enumerate}
+\bibitem{techie2021}
+H. Techie-Menson and P. Nyagorme, "Design and Implementation of a Web-Based Timetable System for Higher Education Institutions," \textit{International Journal of Computer Applications}, vol. 7, pp. 1--13, 2021.
+
+\bibitem{chatgpt2025}
+OpenAI, "ChatGPT (GPT-5 Mini) Prompt Responses," 2025. [Online]. Available: \url{https://chat.openai.com/}. [Accessed: Nov. 8, 2025].
+
+\bibitem{ai_proposal}
+AI prompt, "make a project proposal template in latex as described in given document," OpenAI ChatGPT (GPT-5 Mini), Nov. 8, 2025. [Online]. Available: \url{https://chat.openai.com/}. [Accessed: Nov. 8, 2025].
+
+\bibitem{ai_titlepage}
+AI prompt, "look at the content of title page, like is it grammatically correct and punctuations too?," OpenAI ChatGPT (GPT-5 Mini), Nov. 8, 2025. [Online]. Available: \url{https://chat.openai.com/}. [Accessed: Nov. 8, 2025].
+
+\bibitem{ai_ieee}
+AI prompt, "how to add ieee style references in latex?," OpenAI ChatGPT (GPT-5 Mini), Nov. 8, 2025. [Online]. Available: \url{https://chat.openai.com/}. [Accessed: Nov. 8, 2025].
+
+\bibitem{ai_tools}
+AI prompt, "help me with identifying relevant tools and technology for this project," OpenAI ChatGPT (GPT-5 Mini), Nov. 8, 2025. [Online]. Available: \url{https://chat.openai.com/}. [Accessed: Nov. 8, 2025].
+
+\bibitem{ai_methodology}
+AI prompt, "which software development methodology should we use for our project, what i think is that this system is complex and faces lot of constraints, so we should utilize iterative methods like scrum and kanban which focuses on continuous feedback and evaluation?," OpenAI ChatGPT (GPT-5 Mini), Nov. 8, 2025. [Online]. Available: \url{https://chat.openai.com/}. [Accessed: Nov. 8, 2025].
+
+\bibitem{claude_gantt}
+AI prompt, "can you make gantt chart for schedule given below?," Claude (Sonnet 4.5), Nov. 8, 2025. [Online]. Available: \url{https://claude.ai/new/}. [Accessed: Nov. 8, 2025].
+
+\end{thebibliography}
+
+
+
+
 
 
 \end{document}
