--- a/main.tex
+++ b/main.tex
@@ -75,6 +75,14 @@
 \newpage
 
 \section{Introduction}
+In any education system, time management is very important for both teachers and
+students. A managed schedule helps everyone stay organized and focused. It is important
+to balance study time, free slots, and other activities. When a timetable is clear, well
+planned, and clash-free, students can easily follow their routines and teachers can take
+their classes without confusion. It defines the schedule of classes, allocates venues, assigns
+instructors, and ensures that academic activities are processed in an organized manner.
+Therefore, a proper, efficient, and effective timetable is required to support smooth learning process
+in the university.
 
 \section{Problem Statement}
 The current traditional way of managing and creating university timetables often causes problems like overlapping classes, venues being booked for more than one class simultaneously. This increases inefficiency when there are multiple departments which is a problem in making sure teachers, students, and classrooms are all available at the same time. In addition to that, makeup classes and checking free time slots are done informally through Whatsapp groups by Class Representatives (CR), which sometime leads to delays and conflicts. This makes it harder for students to follow their schedules and for teachers to plan their work. Moreover, timetable is shared through mails, so when there is some conflict, it is resolved and shared again which makes accessing it harder when there are multiple schedules have been shared. Hence, there is a clear need for a proper centralized timetable system that can handle multiple departments, identify conflicts so that can be resolved early, and make education easier. The proposed system aims to solve these problems by providing a centralized platform where clash-free timetable will be ensured. It will provide convenience to everyone involved in timetable managing and scheduling process. Moreover, the system will allow end-users (Students) to view their classes timetable in a mannered way.
