--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -229,25 +229,26 @@ According to one year development schedule, project will be divided into phases 
 \renewcommand{\bibname}{}
 \renewcommand{\arraystretch}{1.3}
 \begin{enumerate}[label={[\arabic*]}, leftmargin=*, align=left, labelwidth=2.3em, itemindent=0em]
-    \item B. Joy, ``Software Engineering Project: Robo Hatch,'' \textit{GitHub Repository}, 2021. [Online]. Available: \url{https://github.com/basudebjoy/Software-Engineering-Project-Robo-Hatch/}. [Accessed: Nov. 8, 2025].
+    \item B. Joy, ``Software engineering project: Robo hatch,'' \textit{GitHub}, 2021. [Online]. Available: \url{https://github.com/basudebjoy/Software-Engineering-Project-Robo-Hatch}. Accessed: Nov. 7, 2025.
     
-    \item University of Washington, ``Beer Recommendation System Project Proposal,'' \textit{CSE403: Software Engineering Course}, 2012. [Online]. Available: \url{https://courses.cs.washington.edu/courses/cse403/12sp/Projects/proposals/brdmstr-proposal.pdf}. [Accessed: Nov. 8, 2025].
+    \item Univ. Washington, ``Beer recommendation system project proposal,'' \textit{CSE403: Softw. Eng. Course}, 2012. [Online]. Available: \url{https://courses.cs.washington.edu/courses/cse403/12sp/Projects/proposals/brdmstr-proposal.pdf}. Accessed: Nov. 7, 2025.
     
-    \item H. Techie-Menson and P. Nyagorme, ``Design and Implementation of a Web-Based Timetable System for Higher Education Institutions,'' \textit{Int. J. Comput. Appl.}, vol. 7, pp. 1--13, 2021.
+    \item H. Techie-Menson and P. Nyagorme, ``Design and implementation of a web-based timetable system for higher education institutions,'' \textit{Int. J. Comput. Appl.}, vol. 7, pp. 1--13, 2021.
     
-    \item OpenAI, ``ChatGPT (GPT-5 Mini) Prompt Responses,'' 2025. [Online]. Available: \url{https://chat.openai.com/}. [Accessed: Nov. 8, 2025].
+    \item OpenAI, ``ChatGPT,'' 2025. [Online]. Available: \url{https://chat.openai.com}. Accessed: Nov. 8, 2025.
     
-    \item AI prompt, ``make a project proposal template in latex as described in given document,'' OpenAI ChatGPT (GPT-5 Mini), Nov. 8, 2025. [Online]. Available: \url{https://chat.openai.com/}. [Accessed: Nov. 8, 2025].
+    \item Author, ``Prompt: make project proposal template in latex as described in given document,'' \textit{ChatGPT, OpenAI}, Nov. 8, 2025. [Online]. Available: \url{https://chat.openai.com}. Accessed: Nov. 8, 2025.
     
-    \item AI prompt, ``look at the content of title page, like is it grammatically correct and punctuations too?,'' OpenAI ChatGPT (GPT-5 Mini), Nov. 8, 2025. [Online]. Available: \url{https://chat.openai.com/}. [Accessed: Nov. 8, 2025].
+    \item Author, ``Prompt: look at content of title page, like is it grammatically correct and punctuations too?,'' \textit{ChatGPT, OpenAI}, Nov. 8, 2025. [Online]. Available: \url{https://chat.openai.com}. Accessed: Nov. 8, 2025.
     
-    \item AI prompt, ``how to add ieee style references in latex?,'' OpenAI ChatGPT (GPT-5 Mini), Nov. 8, 2025. [Online]. Available: \url{https://chat.openai.com/}. [Accessed: Nov. 8, 2025].
+    \item Author, ``Prompt: how to add ieee style references in latex?,'' \textit{ChatGPT, OpenAI}, Nov. 8, 2025. [Online]. Available: \url{https://chat.openai.com}. Accessed: Nov. 8, 2025.
     
-    \item AI prompt, ``help me with identifying relevant tools and technology for this project,'' OpenAI ChatGPT (GPT-5 Mini), Nov. 8, 2025. [Online]. Available: \url{https://chat.openai.com/}. [Accessed: Nov. 8, 2025].
+    \item Author, ``Prompt: help me with identifying relevant tools and technology for this project,'' \textit{ChatGPT, OpenAI}, Nov. 8, 2025. [Online]. Available: \url{https://chat.openai.com}. Accessed: Nov. 8, 2025.
     
-    \item AI prompt, ``which software development methodology should we use for our project, what i think is that this system is complex and faces lot of constraints, so we should utilize iterative methods like scrum and kanban which focuses on continuous feedback and evaluation?,'' OpenAI ChatGPT (GPT-5 Mini), Nov. 8, 2025. [Online]. Available: \url{https://chat.openai.com/}. [Accessed: Nov. 8, 2025].
+    \item Author, ``Prompt: which software development methodology should we use for our project, what I think is that this system is complex and faces lot of constraints, so we should utilize iterative methods like Scrum and Kanban which focuses on continuous feedback and evaluation?,'' \textit{ChatGPT, OpenAI}, Nov. 8, 2025. [Online]. Available: \url{https://chat.openai.com}. Accessed: Nov. 8, 2025.
     
-    \item AI prompt, ``can you make gantt chart for schedule given below?,'' Claude (Sonnet 4.5), Nov. 8, 2025. [Online]. Available: \url{https://claude.ai/new/}. [Accessed: Nov. 8, 2025].
+    \item Author, ``Prompt: can you make Gantt chart for schedule given below?,'' \textit{Claude, Anthropic}, Nov. 8, 2025. [Online]. Available: \url{https://claude.ai}. Accessed: Nov. 8, 2025.
 \end{enumerate}
+
 
 \end{document}
