--- a/Design Document/Design Document.tex
+++ b/Design Document/Design Document.tex
@@ -136,18 +136,6 @@ architecture which is consistent with the system context and interaction of comp
 This level of architectural separation encourages scalability, maintainability and testability, and is.
 shown in the sequence diagram.
 
-\subsection{Database Design Decisions}
-According to the database specifications as per the SRS, a relational database management.
-There is a choice of system (PostgreSQL or MySQL). The database schema is created through normalized.
-relations (up to Third Normal Form) to decrease redundancy and guarantee the consistency of data.
-
-Key design decisions include:
-\begin{itemize}
-    \item Separate tables for users, roles, courses, department, venue, timetables.
-    \item Enforcement of relationships between entities  using foreign key constraints, such as
-    course, lecturers and venue.
-    \item Soft-delete of timetables and user accounts to agree with business, audit requirements and rules.
-\end{itemize}
 
 
 \subsection{Security Design Decisions}
@@ -211,7 +199,7 @@ are demonstrated.
 \begin{figure}[H]
     \centering
     \fbox{
-        \includegraphics[width=1\textwidth]{DFD Level 1.png}
+        \includegraphics[width=1\textwidth]{DFD-1(3).png}
     }
     \caption{Data Flow Diagram - Level 1}
     \label{fig:dfd}
@@ -221,7 +209,7 @@ are demonstrated.
 \begin{figure}[H]
     \centering
     \fbox{
-        \includegraphics[width=1\textwidth]{DFD LEVEL 2 – DASHBOARD.png}
+        \includegraphics[width=1\textwidth]{DFD LEVEL 2 – DASHBOARD(1).png}
     }
     \caption{Data Flow Diagram - Level 2 - Dashboard}
     \label{fig:dfd}
@@ -312,7 +300,7 @@ are demonstrated.
 \begin{figure}[H]
     \centering
     \fbox{
-        \includegraphics[width=1\textwidth]{Publish Timetable SEQ.jpeg}}
+        \includegraphics[width=1\textwidth]{Publish Timetable.jpeg}}
     \caption{Sequence Diagram - Publish Timetable}
     \label{fig:sequence}
 \end{figure}
@@ -421,7 +409,7 @@ are demonstrated.
 \begin{figure}[H]
     \centering
     \fbox{
-        \includegraphics[width=1\textwidth]{Activity Diagram 1 - Notification Delivery Workflow.png}}
+        \includegraphics[width=1\textwidth]{Notification Delivery ACT.png}}
     \caption{Activity Diagram - Notification Delivery }
     \label{fig:sequence}
 \end{figure}
@@ -430,7 +418,7 @@ are demonstrated.
 \begin{figure}[H]
     \centering
     \fbox{
-        \includegraphics[width=1\textwidth]{Activity Diagram 2 - Auto-Timetable Generation Workflow.png}}
+        \includegraphics[width=1\textwidth]{Auto-Timetable Generation.png}}
     \caption{Activity Diagram - Auto-Timetable Generation  }
     \label{fig:sequence}
 \end{figure}
